--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
         run: docker build -f MyApplication/Dockerfile -t ghcr.io/aminsrg/my-dotnet-app:${{ github.sha }} .
 
       - name: Push Docker image
-        run: docker push ghcr.io/${{ github.repository_owner }}/my-dotnet-app:${{ github.sha }}
+        run: docker push ghcr.io/aminsrg/my-dotnet-app:${{ github.sha }}
