--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,10 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set lowercase repo owner
-        run: echo "REPO_OWNER_LC=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
-
+          
       - name: Build Docker image
-        run: docker build   -f MyApplication/Dockerfile -t ghcr.io/$REPO_OWNER_LC/my-dotnet-app:${{ github.sha }} .
+        run: docker build -t ghcr.io/${{ github.repository_owner }}/my-dotnet-app:${{ github.sha }} .
 
       - name: Push Docker image
-        run: docker push ghcr.io/$REPO_OWNER_LC/my-dotnet-app:${{ github.sha }}
+        run: docker push ghcr.io/${{ github.repository_owner }}/my-dotnet-app:${{ github.sha }}
 
