--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Build Docker image
-        run: docker build -f MyWebApi/Dockerfile -t ghcr.io/${{ github.repository_owner }}/my-dotnet-app:${{ github.sha }} .
+        run: docker build -f MyApplication/Dockerfile -t ghcr.io/${{ github.repository_owner }}/my-dotnet-app:${{ github.sha }} .
 
       - name: Push Docker image
         run: docker push ghcr.io/${{ github.repository_owner }}/my-dotnet-app:${{ github.sha }}
