--- a/MyApplication/Dockerfile
+++ b/MyApplication/Dockerfile
@@ -7,6 +7,8 @@ WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+# Copy the certificate into the container
+COPY ["aspnetapp.pfx", "/https/aspnetapp.pfx"]
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
